2008-06-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* window.el (special-display-p, display-buffer):
	Fix up C->Elisp transcription error.

2008-06-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-current-group): New var.
	(byte-compile-file): Initialize it.
	(byte-compile-nogroup-warn): Keep track of the current group.

2008-06-08  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (compile, compile-always, bootstrap-prepare):
	Explictly pass EMACS to sub-makes that use it, for non-GNU makes.

2008-06-07  Jihyun Cho  <jihyun.jo@gmail.com>

	* language/hanja-util.el (hanja-init-load): Use a char-table for
	hanja-table.
	(hangul-to-hanja-char): Adjust for the above change.

2008-06-07  Glenn Morris  <rgm@gnu.org>

	* finder.el (finder-compile-keywords): Use lm-keywords-list rather than
	lm-keywords.

	* mail/sendmail.el (mail-interactive): Add :version.

	* term/linux.el (terminal-init-linux): Use gpm-mouse-mode rather than
	obsolete alias.

	* ediff-merg.el, strokes.el, wid-edit.el, emacs-lisp/lisp-mnt.el:
	* emulation/edt-mapper.el, eshell/em-dirs.el, eshell/em-glob.el:
	* eshell/em-ls.el, eshell/em-unix.el, eshell/esh-cmd.el:
	* eshell/esh-io.el, eshell/esh-opt.el, eshell/esh-test.el:
	* eshell/esh-util.el, international/mule-cmds.el:
	* international/mule-diag.el, mail/smtpmail.el, net/netrc.el:
	* net/tls.el, progmodes/etags.el, textmodes/page-ext.el:
	Remove unnecessary eval-when-compiles and eval-and-compiles.

	* Makefile.in (bootstrap-clean): Run autogen-clean.
	(maintainer-clean): No need to run autogen-clean now it is included in
	bootstrap-clean.

2008-06-06  Miles Bader  <miles@gnu.org>

	* Makefile.in (ELCFILES): Add gnus/nndir.elc.

2008-06-06  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-options-menu): Add Menu entry for
	longlines mode.

	* replace.el (replace-search-function)
	(replace-re-search-function): New vars.
	(perform-replace): Use them.
